# LidarDriver

./: .gitignore  ArrayCircolare-examle.cpp  ArrayCircolare.h  ArrayCircolareDouble.cpp  ArrayDati.cpp  CMakeLists.txt  CircularArray.cpp  README.md  READMEtest.md  main.cpp
.github/workflows/: cmake-multi-platform.yml  create-release.yml
include/: ArrayCircolare-example.h  ArrayCircolare.h  ArrayCircolareDouble.h  ArrayDati.h  CircularArray.h  LidarDriver.h
src/: ArrayDati.cpp  CircularArray.cpp  LidarDriver.cpp  main.cpp
